Tweaked mdx files

--- a/pages/index.ja.mdx
+++ b/pages/index.ja.mdx
@@ -1,11 +1,9 @@
-# イントロ
+# プロフィール
 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+年齢:
+学歴:
+取得資格一覧:
 
 ## Nextra とは?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## ドキュメント
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+知らぬ。
