--- a/pages/another.en.mdx
+++ b/pages/another.en.mdx
@@ -11,7 +11,7 @@ console.log(a);
 import { useState } from "react";
 
 {/* Import CSS modules */}
-import styles from '../components/counters.module.css'
+import styles from '@/components/counters.module.css'
 
 export const Counter = () => {
   const [count, setCount] = useState(0);
@@ -28,6 +28,6 @@ export const Counter = () => {
 
 ## External Component
 
-import Counters from "../components/Counters";
+import Counters from "@/components/Counters";
 
 <Counters />
