--- a/pages/another.ja.mdx
+++ b/pages/another.ja.mdx
@@ -28,6 +28,6 @@ export const Counter = () => {
 
 ## External Component
 
-import Counters from "@/components/Counters";
+import Counters from "@/components/counters";
 
 <Counters />
