--- a/pages/index.en.mdx
+++ b/pages/index.en.mdx
@@ -1,6 +1,10 @@
+import Slider from "@/components/slider";
+
 # Introduction
- 
+
 Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+
+<Slider />
 
 ## What is Nextra?
 
