Modified contents in some mdx files

--- a/pages/index.en.mdx
+++ b/pages/index.en.mdx
@@ -1,15 +1,5 @@
-import Slider from "@/components/slider";
+# Self introduction
 
-# Introduction
-
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
-
-<Slider />
-
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+- _Name_: Hikari
+- _Nationality_: Japan
+- _Languages_: Japanese(My mother tongue), English<br/>
