Modified contents in some mdx files

--- a/pages/index.en.mdx
+++ b/pages/index.en.mdx
@@ -1,5 +1,5 @@
 # Self introduction
 
-- _Name_: Hikari
-- _Nationality_: Japan
-- _Languages_: Japanese(My mother tongue), English<br/>
+- Name: _Hikari_
+- Nationality: _Japan_
+- Languages: _Japanese(My mother tongue), English_
